<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.point85</groupId>
  <artifactId>uom</artifactId>
  <version>1.2.6</version>
  <packaging>jar</packaging>

  <name>uom</name>
  <url>http://maven.apache.org</url>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>

<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
    <version>1.7.26</version>
    <scope>test</scope>
</dependency>

<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-log4j12</artifactId>
    <version>1.7.26</version>
    <scope>test</scope>
</dependency>

<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
<dependency>
    <groupId>com.google.code.gson</groupId>
    <artifactId>gson</artifactId>
    <version>2.9.0</version>
    <scope>test</scope>
</dependency>

<!-- jUnit for testing.  See: http://junit.org/junit4/ -->
<dependency> 
  <groupId>junit</groupId>
  <artifactId>junit</artifactId>
  <version>4.13.2</version>
  <scope>test</scope>
</dependency>

<!-- hamcrest for testing.  See:  http://hamcrest.org/ -->
<dependency>
    <groupId>org.hamcrest</groupId>
    <artifactId>hamcrest-library</artifactId>
    <version>1.3</version>
    <scope>test</scope>
</dependency>

<!-- HTTP client for testing UCUM.  See:  https://github.com/kevinsawicki/http-request -->
<dependency>
    <groupId>com.github.kevinsawicki</groupId>
    <artifactId>http-request</artifactId>
    <version>6.0</version>
    <scope>test</scope>
</dependency>

  </dependencies>
  
  <build>
    <sourceDirectory>.</sourceDirectory>
    <plugins>
        <plugin>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
        <includes>
            <include>src/main/java/**/*.java</include>
        </includes>
        <excludes>
            <exclude>src/test/java/*.*</exclude>
            <exclude>src/test/resources/*.*</exclude>
        </excludes>
        </configuration>
        </plugin>
      
      <plugin>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
  		<groupId>org.apache.maven.plugins</groupId>
  		<artifactId>maven-surefire-plugin</artifactId>
  		<version>2.20.1</version>
  		<configuration>
    		<skipTests>true</skipTests>
  		</configuration>
	  </plugin>
    </plugins>
</build>
</project>
